[package]
name = "readme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros", "time"] }


[dev-dependencies]
cucumber = "0.10"
async-trait = "0.1"
futures = "0.3"

[[test]]
name = "readme"
harness = false